--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -8,14 +8,18 @@
   padding: 10px;
 }
 
+.dialogsItems a {
+  color: black;
+  text-decoration: none;
+}
+
 .dialogsItems .active {
   color: gold;
 }
-
 .messages {
   padding: 10px;
 }
 
-.messages .message {
-  /* padding: 10px; */
+.message {
+  color: white;
 }
