--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -17,11 +17,11 @@
   color: gold;
 } */
 
-.dialogs {
+/* .dialogs {
   display: flex;
 
   padding: 15px;
-}
+} */
 
 .image {
   margin-right: 20px;
